--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
 	"authors": [
 		{
 			"name": "Lewis Goddard",
-			"email": "lewisgoddard@eustasy.org",
-			"homepage": "http://lewisgoddard.eustasy.org",
+			"email": "lewis.goddard@eustasy.org",
+			"homepage": "https://lewisgoddard.me.uk",
 			"role": "Developer"
 		}
 	],
